# m04-p0402

./: README.md  app.py  pyproject.toml  requirements.txt
artifacts/: best_model_knn.pkl  best_model_random_forest.pkl  model_results.csv  preprocessor.pkl
configs/: config.yaml
notebooks/: heart_disease_eda.ipynb  runbook.ipynb
scripts/: download_data.py  train.py
src/: __init__.py
src/app/: __init__.py  main.py
src/configuration/: appsettings.py  configuration_manager.py
src/modeling/: __init__.py
src/modeling/data/: __init__.py  load_data.py  preprocess.py
src/modeling/feature_engineering/: __init__.py  features.py
src/modeling/models/: __init__.py  heart_classifier.py
src/modeling/utils/: logging_utils.py
